--- a/components/package.json
+++ b/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "components",
+  "name": "test",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "shawn sandy <shawnsandy04@gmail.com>",
@@ -8,8 +8,9 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit/specs"
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
     "vue": "^2.1.0"
@@ -59,6 +60,10 @@
     "inject-loader": "^2.0.1",
     "babel-plugin-istanbul": "^3.0.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "chromedriver": "^2.21.2",
+    "cross-spawn": "^4.0.2",
+    "nightwatch": "^0.9.8",
+    "selenium-server": "2.53.1",
     "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
