--- a/components/vue-start/package.json
+++ b/components/vue-start/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "vue-start",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "shawn sandy <shawnsandy04@gmail.com>",
